--- a/risposive.css
+++ b/risposive.css
@@ -45,7 +45,7 @@ header h1{
 }
 @media(max-width:380px){
     header h1{
-        margin: 30px 0px 0px 5px;
+        margin: 30px 0px 0px 5px !important;
         transition: all 0.2s;
     }
 }
